2007-10-20  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-comp): Use square brackets for test.
	Remove dysfunctional code.

2007-10-04  Christian Faulhammer  <opfer@gentoo.org>

	* elisp-common.eclass (EMACS): use an en dash instead of a hypen
	in comment

2007-10-03  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (SITELISP, SITEFILE): Document variables.

2007-09-26  Christian Faulhammer  <opfer@gentoo.org>

	* elisp-common.eclass: remove colon from previous change

2007-09-25  Christian Faulhammer  <opfer@gentoo.org>

	* elisp-common.eclass: remove a spurious space
	add a colon where it might be intended

2007-09-22  Hans de Graaff  <graaff@gentoo.org>

	* xemacs-elisp-common.eclass: Implement xemacs-elisp-comp that can
	be used to compile interdependent elisp files.

	* xemacs-elisp-common.eclass, xemacs-elisp.eclass: Use die
	consistently in the functions in common, as commented on by Donny
	Berkholz on gentoo-dev. Fix documentation.

2007-09-21  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Provide site-gentoo.
	Recommend require instead of load in einfo message.
	Create default site-start.el when running for the first time.
	(elisp-comp): Move comment so that it will appear in the man page.

2007-09-20  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Set no-byte-compile in
	site-gentoo.el.

2007-09-09  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-install): Remove superfluous dodir.

2007-09-08  Hans de Graaff  <graaff@gentoo.org>

	* xemacs-elisp.eclass: Add unpack code which can also deal with
	simple elisp files.
	Add explanation to die when compiling lisp files fails.
	Add documentation so that man page can be generated.

	* xemacs-elisp-common.eclass: Quote all instances of $@ and $*.
	Use singular autoload in function name to keep interface the same
	as for GNU Emacs.
	Add documentation so that man page can be generated.